--- a/ftf_geonode/static/css/site_base.css
+++ b/ftf_geonode/static/css/site_base.css
@@ -47,39 +47,39 @@ a:hover {
 .home .big-search {
   background: #f1f1f1 !important;
 }
-#ftf_geonode_navbar {
+#usaid_geonode_navbar {
   /*background-image: url(../img/background/ftf_background.png);*/
   background: white;
   background-repeat: repeat;
   padding: 2px 0px;
   border-bottom: 2px solid #61998e;
 }
-#ftf_geonode_navbar ul li a {
+#usaid_geonode_navbar ul li a {
   font-family: "proxima-nova-soft", sans-serif !important;
   font-weight: 600 !important;
   color: #505759;
   padding-top: 25px;
   padding-bottom: 25px;
 }
-#ftf_geonode_navbar #navbar ul li:hover a,
-#ftf_geonode_navbar ul li:focus a,
-#ftf_geonode_navbar ul li:selected a {
+#usaid_geonode_navbar #navbar ul li:hover a,
+#usaid_geonode_navbar ul li:focus a,
+#usaid_geonode_navbar ul li:selected a {
   color: #d00f42 !important;
 }
-#ftf_geonode_navbar .navbar-nav .dropdown-menu {
+#usaid_geonode_navbar .navbar-nav .dropdown-menu {
   background-color: white;
   border-top: 1px solid #61998e;
 }
-#ftf_geonode_navbar .navbar-nav ul.dropdown-menu li a {
+#usaid_geonode_navbar .navbar-nav ul.dropdown-menu li a {
   color: #505759;
   font-weight: normal;
   padding: 3px 20px;
 }
-#ftf_geonode_navbar .navbar-nav .dropdown-menu li a:hover {
+#usaid_geonode_navbar .navbar-nav .dropdown-menu li a:hover {
   background-color: white;
   border: 0;
 }
-#ftf_geonode_navbar .navbar-nav .dropdown-menu li a:hover {
+#usaid_geonode_navbar .navbar-nav .dropdown-menu li a:hover {
   background-color: #eeeeee;
   color: #d00f42;
 }
